@@ -9,7 +9,7 @@ Curl and libcurl 7.19.7
 
 This release includes the following changes:
 
- o 
+ o -T. is now for non-blocking uploading from stdin
 
 This release includes the following bugfixes:
 
@@ -19,6 +19,7 @@ This release includes the following bugfixes:
  o data corruption issue with re-connected transfers
  o use after free if we're completed but easy_conn not NULL (pipelined)
  o missing strdup() return code check
+ o CURLOPT_PROXY_TRANSFER_MODE could pass along wrong syntax
 
 This release includes the following known bugs:
 
@@ -27,6 +28,7 @@ This release includes the following known bugs:
 This release would not have looked like this without help, code, reports and
 advice from friends like these:
 
- Karl Moerder, Kamil Dudka, Krister Johansen, Andre Guibert de Bruet
+ Karl Moerder, Kamil Dudka, Krister Johansen, Andre Guibert de Bruet,
+ Michal Marek, Eric Wong
 
         Thanks! (and sorry if I forgot to mention someone)
